Enrique A01027318 directivas,grafica,forms.routing,ingles

--- a/trash/src/app/app.component.html
+++ b/trash/src/app/app.component.html
@@ -2,6 +2,6 @@
 <div class="super_container">
     <app-header></app-header>
     <app-home-p></app-home-p>
-    <app-contenido></app-contenido>
+    <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
