--- a/trash/src/app/modules/modulos-secundarios/contenidof/contenidof.component.css
+++ b/trash/src/app/modules/modulos-secundarios/contenidof/contenidof.component.css
@@ -1,646 +1,8 @@
-@charset "utf-8";
+/*********************************
+6. Post Content
+*********************************/
+
 @import url('https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700|Work+Sans:300,400,500,600,700,800,900');
-@import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
-@import url(https://fonts.googleapis.com/css?family=Titillium+Web:300);
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Oswald:300,400,700');
-
-/* CSS Document */
-
-
-/******************************
-
-[Table of Contents]
-
-1. Fonts
-2. Body and some general stuff
-3. Header
-	3.1 Logo
-	3.2 Main Navigation
-	3.3 Weather and Search
-	3.4 Hamburger
-4. Menu
-5. Home
-6. Post Content
-	6.1 Post Panel
-	6.2 Post Body
-	6.3 Similar Posts
-	6.4 Post Comment
-	6.5 Comments
-7. Cards
-8. Load More Button
-9. Sidebar
-10. Footer
-
-
-******************************/
-
-
-/***********
-1. Fonts
-***********/
-
-
-/*********************************
-2. Body and some general stuff
-*********************************/
-
-* {
-    margin: 0;
-    padding: 0;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
-    text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
-}
-
-body {
-    font-family: 'Work Sans', sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    background: #f7f7f7;
-    color: #a5a5a5;
-}
-
-div {
-    display: block;
-    position: relative;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-ul {
-    list-style: none;
-    margin-bottom: 0px;
-}
-
-p {
-    font-family: 'Work Sans', sans-serif;
-    font-size: 14px;
-    line-height: 1.45;
-    font-weight: 500;
-    color: rgba(0, 0, 0, 0.5);
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
-    text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
-}
-
-p:last-of-type {
-    margin-bottom: 0;
-}
-
-p a {
-    display: inline;
-    position: relative;
-    color: inherit;
-    border-bottom: solid 1px #ffa07f;
-    -webkit-transition: all 200ms ease;
-    -moz-transition: all 200ms ease;
-    -ms-transition: all 200ms ease;
-    -o-transition: all 200ms ease;
-    transition: all 200ms ease;
-}
-
-a,
-a:hover,
-a:visited,
-a:active,
-a:link {
-    text-decoration: none;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
-    text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
-}
-
-p a:active {
-    position: relative;
-    color: #FF6347;
-}
-
-p a:hover {
-    color: #FFFFFF;
-    background: #ffa07f;
-}
-
-p a:hover::after {
-    opacity: 0.2;
-}
-
-h1 {
-    font-size: 48px;
-}
-
-h2 {
-    font-size: 36px;
-}
-
-h3 {
-    font-size: 24px;
-}
-
-h4 {
-    font-size: 18px;
-}
-
-h5 {
-    font-size: 14px;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: 'Open Sans', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
-    text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
-}
-
-.form-control {
-    color: #db5246;
-}
-
-section {
-    display: block;
-    position: relative;
-    box-sizing: border-box;
-}
-
-.clear {
-    clear: both;
-}
-
-.clearfix::before,
-.clearfix::after {
-    content: "";
-    display: table;
-}
-
-.clearfix::after {
-    clear: both;
-}
-
-.clearfix {
-    zoom: 1;
-}
-
-.float_left {
-    float: left;
-}
-
-.float_right {
-    float: right;
-}
-
-.trans_200 {
-    -webkit-transition: all 200ms ease;
-    -moz-transition: all 200ms ease;
-    -ms-transition: all 200ms ease;
-    -o-transition: all 200ms ease;
-    transition: all 200ms ease;
-}
-
-.trans_300 {
-    -webkit-transition: all 300ms ease;
-    -moz-transition: all 300ms ease;
-    -ms-transition: all 300ms ease;
-    -o-transition: all 300ms ease;
-    transition: all 300ms ease;
-}
-
-.trans_400 {
-    -webkit-transition: all 400ms ease;
-    -moz-transition: all 400ms ease;
-    -ms-transition: all 400ms ease;
-    -o-transition: all 400ms ease;
-    transition: all 400ms ease;
-}
-
-.trans_500 {
-    -webkit-transition: all 500ms ease;
-    -moz-transition: all 500ms ease;
-    -ms-transition: all 500ms ease;
-    -o-transition: all 500ms ease;
-    transition: all 500ms ease;
-}
-
-.fill_height {
-    height: 100%;
-}
-
-.super_container {
-    width: 100%;
-    overflow: hidden;
-}
-
-.prlx_parent {
-    overflow: hidden;
-}
-
-.prlx {
-    height: 130% !important;
-}
-
-.parallax-window {
-    min-height: 400px;
-    background: transparent;
-}
-
-.nopadding {
-    padding: 0px !important;
-}
-
-
-/*********************************
-3. Header
-*********************************/
-
-.header {
-    background-color: rgba(113, 148, 163, 0.596);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 100;
-    -webkit-transition: all 200ms ease;
-    -moz-transition: all 200ms ease;
-    -ms-transition: all 200ms ease;
-    -o-transition: all 200ms ease;
-    transition: all 200ms ease;
-}
-
-.header_content {
-    height: 80px;
-    -webkit-transition: all 200ms ease;
-    -moz-transition: all 200ms ease;
-    -ms-transition: all 200ms ease;
-    -o-transition: all 200ms ease;
-    transition: all 200ms ease;
-}
-
-.header.scrolled {
-    background: rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
-}
-
-.header.scrolled .header_content {
-    height: 80px;
-}
-
-.logo a {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 20px;
-    color: rgb(0, 0, 0);
-    text-transform: uppercase;
-    font-weight: 700;
-    letter-spacing: 0.075em;
-}
-
-.main_nav {
-    margin-left: 46px;
-}
-
-.main_nav ul li {
-    display: inline-block;
-}
-
-.main_nav ul li:not(:last-child) {
-    margin-right: 29px;
-}
-
-.main_nav ul li a {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 14px;
-    font-weight: 700;
-    color: rgba(0, 0, 0, 0.5);
-    -webkit-transition: all 200ms ease;
-    -moz-transition: all 200ms ease;
-    -ms-transition: all 200ms ease;
-    -o-transition: all 200ms ease;
-    transition: all 200ms ease;
-}
-
-.main_nav ul li a:hover,
-.main_nav ul li.active a {
-    color: rgb(155, 84, 84);
-}
-
-
-/*********************************
-4. Menu
-*********************************/
-
-.header {
-    background-color: #11111186;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 100;
-    -webkit-transition: all 200ms ease;
-    -moz-transition: all 200ms ease;
-    -ms-transition: all 200ms ease;
-    -o-transition: all 200ms ease;
-    transition: all 200ms ease;
-}
-
-.header_content {
-    height: 80px;
-    -webkit-transition: all 200ms ease;
-    -moz-transition: all 200ms ease;
-    -ms-transition: all 200ms ease;
-    -o-transition: all 200ms ease;
-    transition: all 200ms ease;
-}
-
-.header.scrolled {
-    background: rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 5px 5px rgba(243, 239, 239, 0.733);
-}
-
-.header.scrolled .header_content {
-    height: 80px;
-}
-
-.logo a {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 20px;
-    color: rgb(223, 208, 208);
-    text-transform: uppercase;
-    font-weight: 700;
-    letter-spacing: 0.075em;
-}
-
-.main_nav {
-    margin-left: 46px;
-}
-
-.main_nav ul li {
-    display: inline-block;
-}
-
-.main_nav ul li:not(:last-child) {
-    margin-right: 29px;
-}
-
-.main_nav ul li a {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 14px;
-    font-weight: 700;
-    color: rgb(223, 208, 208);
-    -webkit-transition: all 200ms ease;
-    -moz-transition: all 200ms ease;
-    -ms-transition: all 200ms ease;
-    -o-transition: all 200ms ease;
-    transition: all 200ms ease;
-}
-
-.main_nav ul li a:hover,
-.main_nav ul li.active a {
-    color: rgb(155, 84, 84);
-}
-
-
-/*********************************
-4. Menu
-*********************************/
-
-.fa-2x {
-    font-size: 2em;
-}
-
-.fa {
-    position: relative;
-    display: table-cell;
-    width: 60px;
-    height: 36px;
-    text-align: center;
-    vertical-align: middle;
-    font-size: 20px;
-}
-
-.main-menu:hover,
-nav.main-menu.expanded {
-    width: 250px;
-    overflow: visible;
-}
-
-.main-menu {
-    background: #212121;
-    border-right: 1px solid #e5e5e5;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    height: 100%;
-    left: 0;
-    width: 60px;
-    overflow: hidden;
-    -webkit-transition: width .05s linear;
-    transition: width .05s linear;
-    z-index: 1000;
-}
-
-.main-menu>ul {
-    margin: 7px 0;
-}
-
-.main-menu li {
-    position: relative;
-    display: block;
-    width: 250px;
-}
-
-.main-menu li>a {
-    position: relative;
-    display: table;
-    border-collapse: collapse;
-    border-spacing: 0;
-    color: #999;
-    font-family: arial;
-    font-size: 14px;
-    text-decoration: none;
-    -webkit-transition: all .1s linear;
-    transition: all .1s linear;
-}
-
-.main-menu .nav-icon {
-    position: relative;
-    display: table-cell;
-    width: 60px;
-    height: 36px;
-    text-align: center;
-    vertical-align: middle;
-    font-size: 18px;
-}
-
-.main-menu .nav-text {
-    position: relative;
-    display: table-cell;
-    vertical-align: middle;
-    width: 190px;
-    font-family: 'Titillium Web', sans-serif;
-}
-
-.main-menu>ul.logout {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-}
-
-.no-touch .scrollable.hover {
-    overflow-y: hidden;
-}
-
-.no-touch .scrollable.hover:hover {
-    overflow-y: auto;
-    overflow: visible;
-}
-
-a:hover,
-a:focus {
-    text-decoration: none;
-}
-
-nav {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    -o-user-select: none;
-    user-select: none;
-}
-
-nav ul,
-nav li {
-    outline: 0;
-    margin: 0;
-    padding: 0;
-}
-
-.main-menu li:hover>a,
-nav.main-menu li.active>a,
-.dropdown-menu>li>a:hover,
-.dropdown-menu>li>a:focus,
-.dropdown-menu>.active>a,
-.dropdown-menu>.active>a:hover,
-.dropdown-menu>.active>a:focus,
-.no-touch .dashboard-page nav.dashboard-menu ul li:hover a,
-.dashboard-page nav.dashboard-menu ul li.active a {
-    color: #fff;
-    background-color: #5fa2db;
-}
-
-.area {
-    float: left;
-    background: #e2e2e2;
-    width: 100%;
-    height: 100%;
-}
-
-@font-face {
-    font-family: 'Titillium Web';
-    font-style: normal;
-    font-weight: 300;
-    src: local('Titillium WebLight'), local('TitilliumWeb-Light'), url(http://themes.googleusercontent.com/static/fonts/titilliumweb/v2/anMUvcNT0H1YN4FII8wpr24bNCNEoFTpS2BTjF6FB5E.woff) format('woff');
-}
-
-
-/*********************************
-5. Home
-*********************************/
-
-.img-responsive {
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
-
-.h1home {
-    text-align: center;
-    font-family: "Oswald", sans;
-    font-size: 4rem;
-    font-weight: normal;
-    line-height: 3.5rem;
-}
-
-.h3home {
-    font-size: 1rem;
-    line-height: 2rem;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-}
-
-.containerhome {
-    margin: 0 auto;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: url(https://images.unsplash.com/photo-1456305951335-bb8134aeab8a);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.itemhome {
-    /* Padding is used for smaller screens */
-    padding: 0 30px 0 30px;
-    text-align: center;
-}
-
-.btn {
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    margin-top: 1rem;
-    display: inline-block;
-    line-height: 1.25rem;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    user-select: none;
-    border: 1px solid transparent;
-    padding: .75rem 1.25rem;
-    font-size: 1rem;
-    border-radius: .25rem;
-    transition: all .2s ease-in-out;
-}
-
-.btn-primary {
-    color: #fff;
-    background-color: #000;
-    border-color: #666;
-}
-
-.btn-primary {
-    color: #fff;
-    background-color: #000;
-    border-color: #666;
-}
-
-.btn-primary:hover {
-    color: #fff;
-    background-color: #333;
-    border-color: #666;
-}
-
-@media (min-width: 992px) {
-    .item {
-        width: 80%;
-    }
-}
-
-@media (min-width: 1200px) {
-    .item {
-        width: 60%;
-    }
-}
-
-
-/*********************************
-6. Post Content
-*********************************/
-
 .page_content {
     background: #f7f7f7;
 }
@@ -758,9 +120,9 @@ nav.main-menu li.active>a,
 
 .post_body {
     padding-left: 69px;
-    padding-top: 20px;
+    padding-top: 59px;
     padding-right: 100px;
-    padding-bottom: 20px;
+    padding-bottom: 45px;
     background: #FFFFFF;
     border-radius: 6px;
 }
@@ -1567,185 +929,28 @@ nav.main-menu li.active>a,
     margin-top: 13px;
 }
 
-
-/*********************************
-10. Footer
-*********************************/
-
-.footer {
-    width: 100%;
-    background: #1f1f1f;
-}
-
-.footer_content {
-    padding-top: 50px;
-    text-align: center;
-    padding-bottom: 17px;
-}
-
-.footer_logo a {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 20px;
-    font-weight: 700;
-    color: #FFFFFF;
-    letter-spacing: 0.075em;
-    text-transform: uppercase;
-    line-height: 0.75;
-}
-
-.footer_social {
-    margin-top: 34px;
-}
-
-.footer_social ul li {
-    display: inline-block;
-}
-
-.footer_social ul li:not(:last-child) {
-    margin-right: 21px;
-}
-
-.footer_social ul li i {
-    color: #8f8f8f;
-}
-
-.footer_social_facebook:hover i {
-    color: #3b5999;
-}
-
-.footer_social_twitter:hover i {
-    color: #55acee;
-}
-
-.footer_social_pinterest:hover i {
-    color: #bd081c;
-}
-
-.footer_social_vimeo:hover i {
-    color: #1ab7ea;
-}
-
-.footer_social_instagram:hover i {
-    color: #c26d7a;
-}
-
-.footer_social_google:hover i {
-    color: #dd4b39;
-}
-
-.copyright {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 12px;
-    font-weight: 500;
-    color: rgba(255, 255, 255, 0.1);
-    margin-top: 40px;
-}
-
-.subscribe {
-    width: 100%;
-    height: 100%;
-}
-
-.subscribe_background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 375px;
-    height: 100%;
-    background: #111111;
-}
-
-.subscribe_content {
-    width: 100%;
-    padding-left: 30px;
-    padding-right: 15px;
-    padding-top: 45px;
-}
-
-.subscribe_title {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    color: #FFFFFF;
-    margin-bottom: 32px;
-}
-
-.subscribe_content form {
+.contact_button {
+    display: block;
     position: relative;
-    width: 100%;
-}
-
-.sub_input {
-    width: 100%;
-    background: transparent;
+    width: 143px;
+    height: 36px;
+    background: rgba(45, 223, 128, 0.1);
+    color: rgba(45, 223, 128, 1);
     border: none;
     outline: none;
-    border-bottom: solid 1px #888888;
-    padding-bottom: 9px;
+    border-radius: 18px;
+    cursor: pointer;
+    -webkit-transition: all 200ms ease;
+    -moz-transition: all 200ms ease;
+    -ms-transition: all 200ms ease;
+    -o-transition: all 200ms ease;
+    transition: all 200ms ease;
+    margin-top: 24px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.contact_button:hover {
+    background: rgba(45, 223, 128, 1);
     color: #FFFFFF;
-}
-
-.sub_input::-webkit-input-placeholder {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 14px !important;
-    font-weight: 500 !important;
-    color: rgba(255, 255, 255, 0.5) !important;
-}
-
-.sub_input:-moz-placeholder {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 14px !important;
-    font-weight: 500 !important;
-    color: rgba(255, 255, 255, 0.5) !important;
-}
-
-.sub_input::-moz-placeholder {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 14px !important;
-    font-weight: 500 !important;
-    color: rgba(255, 255, 255, 0.5) !important;
-}
-
-.sub_input:-ms-input-placeholder {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 14px !important;
-    font-weight: 500 !important;
-    color: rgba(255, 255, 255, 0.5) !important;
-}
-
-
-/*.sub_input::input-placeholder
-{
-	font-family: 'Ubuntu', sans-serif;
-	font-size: 14px !important;
-	font-weight: 500 !important;
-	color: rgba(255,255,255,0.5) !important;
-}*/
-
-.sub_button {
-    position: absolute;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
-    right: 0;
-    background: transparent;
-    border: none;
-    outline: none;
-}
-
-.sub_button svg polygon {
-    fill: rgba(255, 255, 255, 0.5);
-}
-
-.subscribe_content form:hover .sub_button svg polygon,
-.subscribe_content form:focus .sub_button svg polygon {
-    fill: #37d27f;
-}
-
-.subscribe_content form:hover .sub_input,
-.sub_input:focus {
-    border-bottom: solid 1px rgba(255, 255, 255, 1);
 }
