Enrique A01027318 ingles finalizado

--- a/trash/src/app/main-components/header/header.component.html
+++ b/trash/src/app/main-components/header/header.component.html
@@ -8,12 +8,12 @@
                     <div class="logo"><a routerLink="index">CDMXtrash</a></div>
                     <nav class="main_nav">
                         <ul>
-                            <li i18n><a routerLink="conocenos">Conocenos</a></li>
-                            <li i18n><a routerLink="signin">Sign In</a></li>
-                            <li i18n><a routerLink="login">Log in</a></li>
-                            <li i18n><a routerLink="conocenos">Contactanos</a></li>
-                            <li i18n><a routerLink="barra">Graficas</a></li>
-                            <li i18n><a routerLink="eng">Eng</a></li>
+                            <li><a routerLink="conocenos" i18n="@@head1">Conocenos</a></li>
+                            <li><a routerLink="signin" i18n="@@head2">Sign In</a></li>
+                            <li><a routerLink="login" i18n="@@head3">Log in</a></li>
+                            <li><a routerLink="conocenos" i18n="@@head4">Contactanos</a></li>
+                            <li><a routerLink="barra" i18n="@@head5">Graficas</a></li>
+                            <li><a routerLink="eng" i18n="@@head6">Eng</a></li>
                         </ul>
                     </nav>
                 </div>
