--- a/trash/src/app/main-components/home-p/home-p.component.html
+++ b/trash/src/app/main-components/home-p/home-p.component.html
@@ -2,7 +2,7 @@
 <div class="containerhome">
     <div class="itemhome">
         <h1 class="h1home" i18n>CDMXtrash</h1>
-        <h3 class="h3home" i18n>CDMXtrash, es un sistema encargado de ayudar a los usuarios de la Ciudad de México a localizar un lugar donde depositar su basura.</h3>
-        <button class="btn btn-primary"><a routerLink="conocenos" i18n>Leyendo</a> </button>
+        <h3 class="h3home" i18n="@@home1">CDMXtrash, es un sistema encargado de ayudar a los usuarios de la Ciudad de México a localizar un lugar donde depositar su basura.</h3>
+        <button class="btn btn-primary"><a routerLink="conocenos" i18n="@@head2">Leyendo</a> </button>
     </div>
 </div>
