--- a/trash/src/app/main-components/menu/menu.component.html
+++ b/trash/src/app/main-components/menu/menu.component.html
@@ -5,31 +5,31 @@
         <li>
             <a routerLink="index">
                 <i class="fa fa-home fa-2x"></i>
-                <span class="nav-text" i18n>Home</span>
+                <span class="nav-text" i18n="@@menu1">Home</span>
             </a>
         </li>
         <li class="has-subnav">
             <a routerLink="login">
                 <i class="fa fa-laptop fa-2x"></i>
-                <span class="nav-text" i18n>Log in </span>
+                <span class="nav-text" i18n="@@menu2">Log in </span>
             </a>
         </li>
         <li class="has-subnav">
             <a routerLink="signin">
                 <i class="fa fa-list fa-2x"></i>
-                <span class="nav-text" i18n>Sign in </span>
+                <span class="nav-text" i18n="@@menu3">Sign in </span>
             </a>
         </li>
         <li class="has-subnav">
             <a routerLink="registrar">
                 <i class="fa fa-folder-open fa-2x"></i>
-                <span class="nav-text" i18n>Registrar botes</span>
+                <span class="nav-text" i18n="@@menu4">Registrar botes</span>
             </a>
         </li>
         <li>
             <a routerLink="conocenos">
                 <i class="fa fa-info fa-2x"></i>
-                <span class="nav-text" i18n>Conocenos</span>
+                <span class="nav-text" i18n="@@menu5">Conocenos</span>
             </a>
         </li>
     </ul>
@@ -37,7 +37,7 @@
         <li>
             <a routerLink="index">
                 <i class="fa fa-power-off fa-2x"></i>
-                <span class="nav-text" i18n>Logout</span>
+                <span class="nav-text" i18n="@@menu6">Logout</span>
             </a>
         </li>
     </ul>
