--- a/trash/src/app/modules/modulos-secundarios/barra/barra.component.html
+++ b/trash/src/app/modules/modulos-secundarios/barra/barra.component.html
@@ -1,9 +1,9 @@
 <div class="page_content">
     <div class="container">
         <div style="padding-top: 50px;"></div>
-        <h1>Capacidad instalada autorizada para el reciclaje y el tratamiento de los residuos sólidos urbanos en México</h1>
-        <h2>[En millones de Toneladas]</h2>
-        <p>SEMARNAT</p>
+        <h1 i18n="@@barra1">Capacidad instalada autorizada para el reciclaje y el tratamiento de los residuos sólidos urbanos en México</h1>
+        <h2 i18n="@@barra2">[En millones de Toneladas]</h2>
+        <p i18n="@@barra3">SEMARNAT</p>
         <div>
             <div style="display: block;">
                 <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions" [legend]="barChartLegend" [chartType]="barChartType"></canvas>
@@ -11,8 +11,8 @@
         </div>
         <div style="padding-top: 50px;"></div>
         <div class="post_body">
-            <h3 i18n>El reciclaje</h3>
-            <p class="post_p" i18n>“Los ciudadanos estamos tomando en cuenta que México tiene un potencial turístico grande. El país va caminando en ese proceso más participativo, pero todavía se necesita esa pinza entre la educación y la aplicación de la ley para ver un cambio.
+            <h3 i18n="@@barra4">El reciclaje</h3>
+            <p class="post_p" i18n="@@barra5">“Los ciudadanos estamos tomando en cuenta que México tiene un potencial turístico grande. El país va caminando en ese proceso más participativo, pero todavía se necesita esa pinza entre la educación y la aplicación de la ley para ver un cambio.
                 El manejo no adecuado de la basura es tarea de la sociedad, la industria, el gobierno, el comercio, de todos los actores involucrados.”</p>
         </div>
         <div style="padding-bottom: 50px;"></div>
