--- a/trash/src/app/modules/modulos-secundarios/contenido-c/contenido-c.component.html
+++ b/trash/src/app/modules/modulos-secundarios/contenido-c/contenido-c.component.html
@@ -14,9 +14,9 @@
                         <div class="author_image">
                             <div><img src="assets/author.jpg" alt=""></div>
                         </div>
-                        <div class="post_meta"><a href="#">Enrique Orduña</a><span i18n>Marzo 04, 2020 a las 16:19 am</span></div>
+                        <div class="post_meta"><a href="#">Enrique Orduña</a><span i18n="@@contenidoc1">Marzo 04, 2020 a las 16:19 am</span></div>
                         <div class="post_share ml-sm-auto">
-                            <span i18n>share</span>
+                            <span i18n="@@contenidoc2">share</span>
                             <ul class="post_share_list">
                                 <li class="post_share_item"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                                 <li class="post_share_item"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -28,41 +28,41 @@
                     <!-- Post Body -->
 
                     <div class="post_body">
-                        <h3 i18n>Descripción del sistema</h3>
-                        <p class="post_p" i18n>CDMXtrash, es un sistema encargado de ayudar a los usuarios de la Ciudad de México a localizar un lugar donde depositar su basura. El usuario podrá, mediante diversos iconos o colores, indicar el tipo de basura de el que desea
+                        <h3 i18n="@@contenidoc3">Descripción del sistema</h3>
+                        <p class="post_p" i18n="@@contenidoc4">CDMXtrash, es un sistema encargado de ayudar a los usuarios de la Ciudad de México a localizar un lugar donde depositar su basura. El usuario podrá, mediante diversos iconos o colores, indicar el tipo de basura de el que desea
                             deshacerse y de esa manera encontrar el bote de basura más cercano a su localización actual, después se le indicará la ruta para llegar a él. En el sistema se registran nuevos botes de basura públicos, y si algún usuario desea
                             proveer su propio bote de basura para los demás, también puede registrarlo. Por otro lado, el sistema será capaz de obtener la retroalimentación de los botes de basura, para que estos se encuentren en buen mantenimeinto y en
                             una posición accesible para los demás usuarios. Estos botes de basura serán identificados con un icono para identificar si en ese bote es posible depositar PET, Tetrapack, aparatos electrónicos, cascajos, etc; esto con la finalidad
                             de contribuir no solo a la cultura del cuidado ambiental, sino también de la cultura del reciclaje. Nuestro objetivo general es el de proveer a la Ciudad de México un mejor lugar y más limpio para vivir.</p>
                         <figure>
                             <img src="assets/ambiente1.jpg" alt="">
-                            <figcaption>Ciudad de México Contaminada</figcaption>
+                            <figcaption i18n="@@contenidoc5">Ciudad de México Contaminada</figcaption>
                         </figure>
-                        <h3 i18n>Descripción de la Problemática a resolver</h3>
-                        <p class="post_p" i18n>Normalmente en la CIudad de México y en otras partes de la república y en general en todo el mundo, la basura es un problema que en la actualidad ha ganado terreno; cada día observamos en la calle montones de montículos de basura
+                        <h3 i18n="@@contenidoc6">Descripción de la Problemática a resolver</h3>
+                        <p class="post_p" i18n="@@contenidoc7">Normalmente en la CIudad de México y en otras partes de la república y en general en todo el mundo, la basura es un problema que en la actualidad ha ganado terreno; cada día observamos en la calle montones de montículos de basura
                             esparcida por doquier y para ser que nadie se hacer cargo de esto. Como sabemos, pocas partes de la ciudad como el Zócalo, cuentan con diversos botes de basura, sin embargo la mayor parte de las calles no cuentan con botes
                             o con centros de recolección de la misma. Es por eso que si un usuario quiere poner a disposición sus botes de basura para colocarlos en la calle, permitirá resolver esta necesidad, generando calles más limpias disminuyendo
                             la contaminación tanto de agua, tierra o aire.</p>
                         <figure>
                             <img src="assets/ambiente.jpeg" alt="">
-                            <figcaption>Ciudad de México Contaminada</figcaption>
+                            <figcaption i18n="@@contenidoc8">Ciudad de México Contaminada</figcaption>
                         </figure>
-                        <h3 i18n>Forma para solucionar la problemática</h3>
-                        <p class="post_p" i18n>Se realizará una aplicación Web para que lo usuarios que quieran poner a disposición su bote de basura puedan darlo de alto al sistema; por otro lado, si un usuario tiene la necesidad de tirar basura, este mismo puede buscar cuales
+                        <h3 i18n="@@contenidoc9">Forma para solucionar la problemática</h3>
+                        <p class="post_p" i18n="@@contenidoc10">Se realizará una aplicación Web para que lo usuarios que quieran poner a disposición su bote de basura puedan darlo de alto al sistema; por otro lado, si un usuario tiene la necesidad de tirar basura, este mismo puede buscar cuales
                             son los botes de basura más cercanos a su posición, con la comodidad de buscar él mismo la ruta más rápida y con la comodidad de escuchar música de Spotify mientras realiza su recorrido.</p>
                         <figure>
                             <img src="assets/ambiente2.jpg" alt="">
-                            <figcaption>Ciudad de México Contaminada</figcaption>
+                            <figcaption i18n="@@contenidoc11">Ciudad de México Contaminada</figcaption>
                         </figure>
-                        <h3 i18n>Diferenciador con respecto a otras soluciones</h3>
-                        <p class="post_p" i18n>Realmente al momento no existe una solución similar que permita encontrar los botes de basura, por otro lado el diferenciador importante que promete el uso de esta aplicación es que los mismos ciudadanos pueden poner a disposición
+                        <h3 i18n="@@contenidoc12">Diferenciador con respecto a otras soluciones</h3>
+                        <p class="post_p" i18n="@@contenidoc13">Realmente al momento no existe una solución similar que permita encontrar los botes de basura, por otro lado el diferenciador importante que promete el uso de esta aplicación es que los mismos ciudadanos pueden poner a disposición
                             su propio bote de basura; permitiéndoles recibir bonificaciones, pero lo más importante es el poder involucrar a las personas a realizar acciones involucradas a la cultura del medio ambiente.</p>
                         <figure>
                             <img src="assets/ambiente4.jpg" alt="">
-                            <figcaption>Ciudad de México Contaminada</figcaption>
+                            <figcaption i18n="@@contenidoc14">Ciudad de México Contaminada</figcaption>
                         </figure>
-                        <h3 i18n>Nuestra inspiración</h3>
-                        <p class="post_p" i18n>Algunas soluciones similares que se han incluido para el manejo de los residuos sólidos, es el desarrollo de la aplicación GreenApp, usada en Europa con el propósito de indicar a los usuarios en qué tipo de bote de basura debe
+                        <h3 i18n="@@contenidoc15">Nuestra inspiración</h3>
+                        <p class="post_p" i18n="@@contenidoc16">Algunas soluciones similares que se han incluido para el manejo de los residuos sólidos, es el desarrollo de la aplicación GreenApp, usada en Europa con el propósito de indicar a los usuarios en qué tipo de bote de basura debe
                             depositar su propia basura, para poder generar un reciclaje mayormente informado. Además es importante mencionar que permite indicar si el depósito ya está lleno o si el depósito aún tiene espacio para más basura por medio
                             de iconos. Así mismo las personas pueden reportar si los contenedores están dañados, son inaccesibles, si está contaminado o algún otro problema.</p>
                     </div>
@@ -72,15 +72,15 @@
                     <div class="similar_posts">
                         <!-- Post Comment -->
                         <div class="post_comment">
-                            <div class="post_comment_title" i18n>Post Comment</div>
+                            <div class="post_comment_title" i18n="@@contenidoc17">Post Comment</div>
                             <div class="row">
                                 <div class="col-xl-8">
                                     <div class="post_comment_form_container">
                                         <form action="#">
-                                            <input type="text" class="comment_input comment_input_name" placeholder="Your Name" required="required">
-                                            <input type="email" class="comment_input comment_input_email" placeholder="Your Email" required="required">
-                                            <textarea class="comment_text" placeholder="Your Comment" required="required"></textarea>
-                                            <button type="submit" class="comment_button">Post Comment</button>
+                                            <input type="text" class="comment_input comment_input_name" placeholder="Your Name" required="required" data-i18n="@@contenidoc17">
+                                            <input type="email" class="comment_input comment_input_email" placeholder="Your Email" required="required" data-i18n="@@contenidoc18">
+                                            <textarea class="comment_text" placeholder="Your Comment" required="required" data-i18n="@@contenidoc19"></textarea>
+                                            <button type="submit" class="comment_button" data-i18n="@@contenidoc20">Post Comment</button>
                                         </form>
                                     </div>
                                 </div>
@@ -88,7 +88,7 @@
                         </div>
                         <!-- Comments -->
                         <div class="comments">
-                            <div class="comments_title" i18n>Comments <span>(12)</span></div>
+                            <div class="comments_title" i18n="@@contenidoc21">Comments <span>(12)</span></div>
                             <div class="row">
                                 <div class="col-xl-8">
                                     <div class="comments_container">
@@ -99,11 +99,11 @@
                                                         <div class="comment_author_image">
                                                             <div><img src="assets/comment_author_1.jpg" alt=""></div>
                                                         </div>
-                                                        <small class="post_meta"><a href="#">Enrique Orduña</a><span i18n>Marzo 02, 2020 a las  7:48 am</span></small>
-                                                        <button type="button" class="reply_button ml-auto">Reply</button>
+                                                        <small class="post_meta"><a href="#">Enrique Orduña</a><span i18n="@@contenidoc22">Marzo 02, 2020 a las  7:48 am</span></small>
+                                                        <button type="button" class="reply_button ml-auto" data-i18n="@@contenidoc23">Reply</button>
                                                     </div>
                                                     <div class="comment_content">
-                                                        <p i18n>Yo como contribuyente de botes de basura de PET necesito registrar los botes de basura aportados junto con su localización para que la gente pueda encontrarlos mediante la aplicación y tenerlos en
+                                                        <p i18n="@@contenidoc24">Yo como contribuyente de botes de basura de PET necesito registrar los botes de basura aportados junto con su localización para que la gente pueda encontrarlos mediante la aplicación y tenerlos en
                                                             mantenimiento adecuado.</p>
                                                     </div>
                                                 </div>
@@ -116,11 +116,11 @@
                                                                 <div class="comment_author_image">
                                                                     <div><img src="assets/comment_author_2.jpg" alt=""></div>
                                                                 </div>
-                                                                <small class="post_meta"><a href="#">Diego Levy</a><span i18n>Marzo 04, 2020 a las  11:48 am</span></small>
-                                                                <button type="button" class="reply_button ml-auto">Reply</button>
+                                                                <small class="post_meta"><a href="#">Diego Levy</a><span i18n="@@contenidoc25">Marzo 04, 2020 a las  11:48 am</span></small>
+                                                                <button type="button" class="reply_button ml-auto" data-i18n="@@contenidoc26">Reply</button>
                                                             </div>
                                                             <div class="comment_content">
-                                                                <p i18n>Yo como contribuyente de botes de basura de Tetrapack necesito registrar los botes de basura aportados junto con su localización para que la gente pueda encontrarlos mediante la aplicación
+                                                                <p i18n="@@contenidoc27">Yo como contribuyente de botes de basura de Tetrapack necesito registrar los botes de basura aportados junto con su localización para que la gente pueda encontrarlos mediante la aplicación
                                                                     y tenerlos en mantenimiento adecuado.</p>
                                                             </div>
                                                         </div>
@@ -138,11 +138,11 @@
                                                         <div class="comment_author_image">
                                                             <div><img src="assets/comment_author_1.jpg" alt=""></div>
                                                         </div>
-                                                        <small class="post_meta"><a href="#">Daniel Cuellar</a><span i18n>Marzo 05, 2020 a las  9:48 am</span></small>
-                                                        <button type="button" class="reply_button ml-auto">Reply</button>
+                                                        <small class="post_meta"><a href="#">Daniel Cuellar</a><span i18n="@@contenidoc28">Marzo 05, 2020 a las  9:48 am</span></small>
+                                                        <button type="button" class="reply_button ml-auto" data-i18n="@@contenidoc29">Reply</button>
                                                     </div>
                                                     <div class="comment_content">
-                                                        <p i18n>Yo como contribuyente de botes de basura de cascajo necesito registrar los botes de basura aportados junto con su localización para que la gente pueda encontrarlos mediante la aplicación y tenerlos
+                                                        <p i18n="@@contenidoc30">Yo como contribuyente de botes de basura de cascajo necesito registrar los botes de basura aportados junto con su localización para que la gente pueda encontrarlos mediante la aplicación y tenerlos
                                                             en mantenimiento adecuado.</p>
                                                     </div>
                                                 </div>
