--- a/trash/src/app/modules/modulos-secundarios/login/login.component.html
+++ b/trash/src/app/modules/modulos-secundarios/login/login.component.html
@@ -10,10 +10,10 @@
                     <div class="post_comment">
                         <div class="contact_form_container">
                             <form routerLink="../find">
-                                <input type="text" maxlength="30" class="contact_input contact_input_name" placeholder="Tu nombre de usuario" i18n>
-                                <input type="email" maxlength="30" class="contact_input contact_input_email" placeholder="Tu correo" i18n>
-                                <input type="password" maxlength="30" class="contact_input contact_input_email" placeholder="Tu contraseña" required="required" i18n>
-                                <button type="submit" class="contact_button" i18n>Enviar</button>
+                                <input type="text" maxlength="30" class="contact_input contact_input_name" placeholder="Tu nombre de usuario" data-i18n="@@login1">
+                                <input type="email" maxlength="30" class="contact_input contact_input_email" placeholder="Tu correo" data-i18n="@@login2">
+                                <input type="password" maxlength="30" class="contact_input contact_input_email" placeholder="Tu contraseña" required="required" data-i18n="@@login3">
+                                <button type="submit" class="contact_button" data-i18n="@@login4">Enviar</button>
                             </form>
                         </div>
                     </div>
