--- a/trash/src/app/main-components/footer/footer.component.html
+++ b/trash/src/app/main-components/footer/footer.component.html
@@ -3,7 +3,7 @@
         <div class="row row-lg-eq-height">
             <div class="col-lg-9 order-lg-1 order-2">
                 <div class="footer_content">
-                    <div class="footer_logo"><a routerLink="#">CDMXtrash</a></div>
+                    <div class="footer_logo"><a routerLink="index">CDMXtrash</a></div>
                     <div class="footer_social">
                         <ul>
                             <li class="footer_social_facebook"><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -11,7 +11,7 @@
                             <li class="footer_social_instagram"><a href="https://twitter.com/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                             <li class="footer_social_google"><a href="https://www.google.com/"><i class="fa fa-google" aria-hidden="true"></i></a></li>
                         </ul>
-                        <div class="subscribe_title" i18n>Comparte tu experiencia e invita a tus amigos</div>
+                        <div class="subscribe_title" i18n="@@footer">Comparte tu experiencia e invita a tus amigos</div>
                     </div>
                 </div>
             </div>
