--- a/trash/src/app/modules/modulos-secundarios/baja/baja.component.html
+++ b/trash/src/app/modules/modulos-secundarios/baja/baja.component.html
@@ -13,7 +13,7 @@
                                 <input type="text" class="contact_input contact_input_name" placeholder="Tu nombre" required="required">
                                 <input type="email" class="contact_input contact_input_email" placeholder="Tu correo" required="required">
                                 <textarea class="contact_text" placeholder="Tu mensaje" required="required"></textarea>
-                                <button type="submit" class="contact_button">Enviar</button>
+                                <button type="submit" class="contact_button"><span i18n="@@baja1">Enviar</span></button>
                             </form>
                         </div>
                     </div>
