--- a/trash/src/app/modules/modulos-secundarios/contact/contact.component.html
+++ b/trash/src/app/modules/modulos-secundarios/contact/contact.component.html
@@ -10,10 +10,10 @@
                     <div class="post_comment">
                         <div class="contact_form_container">
                             <form action="#">
-                                <input type="text" class="contact_input contact_input_name" placeholder="Tu nombre" required="required">
-                                <input type="email" class="contact_input contact_input_email" placeholder="Tu correo" required="required">
-                                <textarea class="contact_text" placeholder="Tu mensaje" required="required"></textarea>
-                                <button type="submit" class="contact_button">Enviar</button>
+                                <input type="text" class="contact_input contact_input_name" placeholder="Tu nombre" required="required" data-i18n="@@contact1">
+                                <input type="email" class="contact_input contact_input_email" placeholder="Tu correo" required="required" data-i18n="@@contact2">
+                                <textarea class="contact_text" placeholder="Tu mensaje" required="required" data-i18n="@@contact3"></textarea>
+                                <button type="submit" class="contact_button" data-i18n="@@contact4">Enviar</button>
                             </form>
                         </div>
                     </div>
