--- a/trash/src/app/modules/modulos-secundarios/contenido/contenido.component.html
+++ b/trash/src/app/modules/modulos-secundarios/contenido/contenido.component.html
@@ -8,14 +8,14 @@
                     <!-- Blog Section - Don't Miss -->
                     <div class="blog_section">
                         <div class="section_panel d-flex flex-row align-items-center justify-content-start">
-                            <div class="section_title" i18n>Para recordar</div>
+                            <div class="section_title" i18n="@@contenido1">Para recordar</div>
                             <div class="section_tags ml-auto">
                                 <ul>
-                                    <li><a routerLink="conocenos" i18n>Conocenos</a></li>
-                                    <li><a routerLink="login" i18n>Log In</a></li>
-                                    <li><a routerLink="signin" i18n>Sign In</a></li>
-                                    <li><a routerLink="contactanos" i18n>Contáctanos</a></li>
-                                    <li><a routerLink="eng" i18n>Eng</a></li>
+                                    <li i18n="@@contenido2"><a routerLink="conocenos">Conocenos</a></li>
+                                    <li i18n="@@contenido3"><a routerLink="login">Log In</a></li>
+                                    <li i18n="@@contenido4"><a routerLink="signin">Sign In</a></li>
+                                    <li i18n="@@contenido5"><a routerLink="contactanos">Contáctanos</a></li>
+                                    <li i18n="@@contenido6"><a routerLink="eng">Eng</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -25,16 +25,16 @@
                                 <div class="card card_largest_with_image grid-item">
                                     <img class="card-img-top" src="assets/fonfoi1.jpg" alt="https://unsplash.com/@cjtagupa">
                                     <div class="card-body">
-                                        <div class="card-title" i18n><a routerLink="barra">¿Quieres saber como funciona la plataforma?</a></div>
-                                        <p class="card-text" i18n>Contamos con un sistema de geolocalización de los botes más cercanos</p>
-                                        <small class="post_meta">Enrique Orduña<span>Marzo 05, 2020 a las 9:48 pm</span></small>
+                                        <div class="card-title" i18n="@@contenido7"><a routerLink="barra">¿Quieres saber como funciona la plataforma?</a></div>
+                                        <p class="card-text" i18n="@@contenido8">Contamos con un sistema de geolocalización de los botes más cercanos</p>
+                                        <small class="post_meta">Enrique Orduña<span i18n="@@contenido9">Marzo 05, 2020 a las 9:48 pm</span></small>
                                     </div>
                                 </div>
                                 <!-- Small Card Without Image -->
                                 <div class="card card_default card_small_no_image grid-item">
                                     <div class="card-body">
-                                        <div class="card-title card-title-small" i18n><a href="post.html">¿Sabes de la importancia del reciclaje?</a></div>
-                                        <small class="post_meta" i18n>Enrique Orduña<span>Marzo 05, 2020 a las 9:48 pm</span></small>
+                                        <div class="card-title card-title-small" i18n="@@contenido10"><a href="post.html">¿Sabes de la importancia del reciclaje?</a></div>
+                                        <small class="post_meta">Enrique Orduña<span i18n="@@contenido11">Marzo 05, 2020 a las 9:48 pm</span></small>
                                     </div>
                                 </div>
                             </div>
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="load_more">
-                    <div id="load_more" class="load_more_button text-center trans_200" i18n>Load More</div>
+                    <div id="load_more" class="load_more_button text-center trans_200" i18n="@@contenido12">Load More</div>
                 </div>
             </div>
             <!-- Sidebar -->
@@ -55,8 +55,8 @@
                     <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src="assets/cona.jpg" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title" i18n>Conamat</h5>
-                            <p class="card-text" i18n>¿Clases de regularización?</p>
+                            <h5 class="card-title" i18n="@@contenido13">Conamat</h5>
+                            <p class="card-text" i18n="@@contenido14">¿Clases de regularización?</p>
                             <a href="#" class="btn btn-primary">Conamat.mx</a>
                         </div>
                     </div>
@@ -64,23 +64,23 @@
                     <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src="assets/beca.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title" i18n>Tecnológico de Monterrey</h5>
-                            <p class="card-text" i18n>Acercate al programa</p>
+                            <h5 class="card-title" i18n="@@contenido15">Tecnológico de Monterrey</h5>
+                            <p class="card-text" i18n="@@contenido16">Acercate al programa</p>
                             <a href="http://lideresdelmanana.itesm.mx/" class="btn btn-primary">Líderes.mx</a>
                         </div>
                     </div>
                     <!-- Future Events -->
 
-                    <div class="sidebar_title" i18n>Planeación del proyecto</div>
+                    <div class="sidebar_title" i18n="@@contenido17">Planeación del proyecto</div>
                     <!-- Planeación -->
                     <div class="list-group">
                         <button type="button" class="list-group-item list-group-item-action active">
                             Clases
                             </button>
-                        <button type="button" class="list-group-item list-group-item-action">HTML</button>
-                        <button type="button" class="list-group-item list-group-item-action">SASS</button>
-                        <button type="button" class="list-group-item list-group-item-action">Angular</button>
-                        <button type="button" class="list-group-item list-group-item-action" disabled>Y más...</button>
+                        <button type="button" class="list-group-item list-group-item-action" data-i18n="@@contenido18">HTML</button>
+                        <button type="button" class="list-group-item list-group-item-action" data-i18n="@@contenido19">SASS</button>
+                        <button type="button" class="list-group-item list-group-item-action" data-i18n="@@contenido20">Angular</button>
+                        <button type="button" class="list-group-item list-group-item-action" data-i18n="@@contenido21" disabled>Y más...</button>
                     </div>
                 </div>
             </div>
