--- a/trash/src/app/modules/modulos-secundarios/signin/signin.component.html
+++ b/trash/src/app/modules/modulos-secundarios/signin/signin.component.html
@@ -10,12 +10,12 @@
                     <div class="post_comment">
                         <div class="contact_form_container">
                             <form routerLink="../find">
-                                <input type="text" maxlength="30" class="contact_input contact_input_name" placeholder="Tu nombre de usuario" required="required" i18n>
-                                <input type="text" maxlength="30" class="contact_input contact_input_name" placeholder="Tu nombre" required="required" i18n>
-                                <input type="text" maxlength="30" class="contact_input contact_input_name" placeholder="Tu apellido" required="required" i18n>
-                                <input type="email" maxlength="30" class="contact_input contact_input_email" placeholder="Tu correo" required="required" i18n>
-                                <input type="password" maxlength="30" class="contact_input contact_input_email" placeholder="Tu contraseña" required="required" i18n>
-                                <button type="submit" class="contact_button" i18n>Enviar</button>
+                                <input type="text" maxlength="30" class="contact_input contact_input_name" placeholder="Tu nombre de usuario" required="required" data-i18n="@@signin1">
+                                <input type="text" maxlength="30" class="contact_input contact_input_name" placeholder="Tu nombre" required="required" data-i18n="@@signin2">
+                                <input type="text" maxlength="30" class="contact_input contact_input_name" placeholder="Tu apellido" required="required" data-i18n="@@signin3">
+                                <input type="email" maxlength="30" class="contact_input contact_input_email" placeholder="Tu correo" required="required" data-i18n="@@signin4">
+                                <input type="password" maxlength="30" class="contact_input contact_input_email" placeholder="Tu contraseña" required="required" data-i18n="@@signin5">
+                                <button type="submit" class="contact_button" data-i18n="@@signin6">Enviar</button>
                             </form>
                         </div>
                     </div>
